--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 html {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    height: 100%;
-    box-sizing: border-box;
+	font-family: Helvetica, Arial, sans-serif{
+	font-size: 16px{
+	height: 100%{
+	box-sizing: border-box;
 }
 body {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 .page-login {
 	width: 100%;
@@ -18,7 +18,7 @@ body {
 }
 .img-wrap {
 	display: block;
-    cursor: pointer;
+	cursor: pointer;
 }
 .img-wrap img {
 	width: 300px;
@@ -32,8 +32,8 @@ body {
 }
 .container-wrap {
 	border: 1px solid rgba(242, 242, 242, 1);
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.349019607843137);
+    	border-radius: 10px;
+    	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.349019607843137);
 }
 .container-inner {
 	width: 300px;
@@ -46,19 +46,19 @@ body {
 label {
 	display: block;
 	cursor: pointer; 
-    line-height: 20px;
-    clear: both;
-    color: #222;
+    	line-height: 20px;
+    	clear: both;
+    	color: #222;
    	margin: 6px 0 7px;
-    text-transform: none;
+    	text-transform: none;
 }
 .input-wrap {
 	display: inline-block;
 	box-sizing: border-box;
 	width: 100%;
 	padding: 14px;
-    border: 1px solid #ced4da;
-    border-radius: 5px;
+    	border: 1px solid #ced4da;
+    	border-radius: 5px;
 }
 .formgroup-btn {
 	margin-top: 30px;
