--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ label {
 	border-radius: 5px;
 	color: #fff;
 	cursor: pointer;
-	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.349019607843137); 
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.349019607843137);
+	transition: all 0.5s ease;
 }
 
 
