--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ label {
 	width: 300px;
     	height: 60px;
 	background: #169bd5;
+	border: 0;
 	border-radius: 5px;
 	color: #fff;
 	cursor: pointer;
