--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
-	font-family: Helvetica, Arial, sans-serif{
-	font-size: 16px{
-	height: 100%{
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	height: 100%;
 	box-sizing: border-box;
 }
 body {
