--- a/style_nav.css
+++ b/style_nav.css
@@ -1,9 +1,9 @@
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	line-height: 1;
+	margin: 0;
+	padding: 0;
 }
 .nav-panel-local {
 	display: flex;
@@ -18,50 +18,51 @@ body {
 	font-size: 20px;
 }
 .nav-panel-local__items {
-    display: flex;
+	display: flex;
 }
 .navigation {
    	display: flex;
 	justify-content: space-between;
-    counter-reset: myCounter;
+	counter-reset: myCounter;
   	list-style-type: none;
   	padding: 0;
+	margin: auto; 
 }
 .navigation__item{
 	position: relative;
-    padding-left: 30px;
-    margin-left: 20px;
-    line-height: 25px;
-    cursor: pointer;
+ 	padding-left: 30px;
+	margin-left: 20px;
+	line-height: 1.6;
+	cursor: pointer;
 }
 .navigation__link {
  	text-decoration: none;
-    color: #fff; 
-    font-size: 14px;
-    font-weight: 700;  
+	color: #fff; 
+	font-size: 14px;
+	font-weight: 700;  
 }
 .navigation__link:after {
-    position: absolute;
-    top: 18px;
-    left: 14px;
-    width: 2px;
-    color: #000;   
+	position: absolute;	 
+	top: 18px;	 
+	left: 14px;
+	width: 2px;
+	color: #000;   
 }
 .navigation__link:before {
-    content: counter(myCounter);
-    counter-increment: myCounter;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 22px;
-    height: 22px;
+	content: counter(myCounter);
+	counter-increment: myCounter;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 22px;
+	height: 22px;
 	line-height: 22px;
-    padding: 0px;
-    font-weight: 700;
-    color: #000;
-    background: #fff;
-    text-align: center;
-    border-radius: 15px;
+	padding: 0px;
+	font-weight: 700;
+	color: #000;
+	background: #fff;
+	text-align: center;
+	border-radius: 15px;
 }
 .navigation__link:hover {
 	background-color: #169bd5;
@@ -79,25 +80,26 @@ body {
 	width: 100%;
 	box-sizing: border-box;
 	border: 1px solid rgba(242, 242, 242, 1);
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.349019607843137);
-}
-.nav-panel-main__left  {
-    height: 186px;
+	border-radius: 10px;
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.349019607843137);
 }
 .pannel-group  {
 	display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #f2f2f2;
-    width: 125px;
-    text-align: center;
-    line-height: 30px;
-    font-size: 13px;
+	justify-content: center;	align-items: center;
+	background: #f2f2f2;
+	width: 125px;
+	height: 186px;
+	text-align: center;
+	line-height: 1.5;
+	font-size: 13px;
 }
- .pannel-icon {
- 	color: #000;
- 	text-decoration: none;
+.pannel-icon {
+	color: #aaa;
+}
+.pannel-icon:hover {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
 }
 .fas {
 	font-size: 	40px;
@@ -107,23 +109,18 @@ body {
 	justify-content: flex-end;
 }
 .arrow-group {
-	display: flex;
-	margin-left: 40px;
+	display: flex;	
 }
 .arrow-block{
-	margin-left: 20px;
+	margin-left: 30px;
+}
+.arrow-group__step {
+	border-left: 2px solid #000;
+	margin-left: 30px;
 }
 .img-panel {
-	padding: 60px 0;	
-}
-.vertical {
-	margin: 20px 0 20px 60px;
-}
-.step a {
-	color: grey;
-}
-.img-panel {
-    width: 100%;    
+	width: 100%; 
+	padding: 60px 0;   
 }
 .img-panel-main {
 	width: 60%;
@@ -135,43 +132,19 @@ h1 {
 .img-panel-main img {
 	width: 100%;
 }
-.pagination {
+.nav-panel-pagination {
 	width: 100%;
 }
-.pagination_list{
+.pagination{
 	background: #999;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style: none;
-    justify-content: center;
 }
-.page-link {
-	border: 1px solid #fff;
-	text-decoration: none;
-	display: inline-block;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	padding: 0;
-	text-align: center;
-	background: #fff;
-}
-.page-link:hover {
-	background-color: #169bd5;
-	color: white;
-}
-.page-link .active {
-	background-color: #169bd5;
-	color: white;
-}
+
 @media (max-width: 768px) {
 .navigation {
-	/*flex-direction: row;*/
 	flex-direction: column;
 }
 .nav-panel-local__operation p {
-    font-size: 16px;
-    text-align: center;
+	font-size: 16px;
+	text-align: center;
 }
 }
